# cpu_burn

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  package.json
cmake/: cpu_burn-config.cmake.in
include/cpu_burn/: cpu_burn.hpp
src/: cpu_burn.cpp  main.cpp
